infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  replicas: 1
  selector: #instructions how to find the pod
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels: 
        app: auth-mongo #the pod name
    spec:
      containers: # instructions which image to run in Docker
        - name: auth-mongo
          image: mongo
---
# we need a service to communicate with the DB pod which expose it outside
apiVersion: v1
kind: Service
metadata: 
  name: auth-mongo-srv
spec:
  selector: 
    app: auth-mongo # find a pod with this label and give it access
  ports:
    - name: db # for logging purposes
      protocol: TCP
      port: 27017 
      targetPort: 27017 # mongoDB by default work on port 27017
