infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec: #how the deployment behave
  replicas: 1
  selector:
    matchLabels:
      app: client
  template: # describes how every pod should behave
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: us.gcr.io/ticketing-dev-373320/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector: # how the service would find the pod
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
